--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.3.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
